<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:background="@color/WHITE">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundapp2"
            android:text="SIGN UP"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/name_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ground_useredit"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/email_edt"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ground_useredit"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ground_useredit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/phone_edt"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ground_useredit"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/exper_edt"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ground_useredit"
            android:hint="@string/experience"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            />

        <Spinner
            android:id="@+id/sp_categrayProvider"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:popupBackground="@drawable/ground_useredit"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/setImage_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ground_userbutton"
            android:text="@string/Setimage"
            android:textColor="@color/WHITE"
            android:layout_marginTop="5dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/img_set"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/ground_userbutton"
            android:text="@string/Setimage"
            android:textColor="@color/WHITE"
            android:layout_marginTop="5dp"
            android:visibility="gone"/>



        <Button
            android:id="@+id/signup_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ground_userbutton"
            android:text="@string/SignUp"
            android:textColor="@color/WHITE"
            android:textSize="15dp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

    </ScrollView>
</RelativeLayout>