<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserActivity"
    android:background="@color/WHITE">
    <TextView
        android:id="@+id/tv_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:textColor="@color/backgroundapp2"
        android:gravity="center"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:text="@string/chooseType"
            android:textColor="@color/backgroundapp2"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/provider"
            android:layout_gravity="center_horizontal"/>


        <Button
            android:id="@+id/provider_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ground_userbutton"
            android:text="@string/provider_btn"
            android:textColor="@color/WHITE"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/customer"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/cutomer_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ground_userbutton"
            android:text="@string/cutomer_btn"
            android:textColor="@color/WHITE"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>