<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ServiceFragment"
    android:background="@color/WHITE">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/selectService"
                android:textColor="@color/backgroundapp2"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_margin="30dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="left"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/imv_home"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/homedecor_image"
                        />
                    <TextView
                        android:layout_gravity="left"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/decor"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="@color/WHITE"
                        android:background="@drawable/ground_userbutton"
                        android:layout_marginBottom="40dp"/>
                    <ImageView
                        android:id="@+id/imv_technology"
                        android:layout_gravity="left"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/technology_image"
                        />
                    <TextView
                        android:layout_gravity="left"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/technology"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="@color/WHITE"
                        android:background="@drawable/ground_userbutton"
                        android:layout_marginBottom="40dp"/>
                    <ImageView
                        android:id="@+id/imv_electricity"
                        android:layout_gravity="left"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/electricity_image"
                        />
                    <TextView
                        android:layout_gravity="left"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/electricity"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="@color/WHITE"
                        android:background="@drawable/ground_userbutton"
                        android:layout_marginBottom="40dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="right"
                    android:padding="10dp">
                    <ImageView
                        android:id="@+id/imv_maintenance"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/maintenance_image"
                        android:layout_gravity="right"
                        />
                    <TextView
                        android:layout_gravity="right"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/maintenance"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="@color/WHITE"
                        android:background="@drawable/ground_userbutton"
                        android:layout_marginBottom="40dp"/>
                    <ImageView
                        android:id="@+id/imv_painting"
                        android:layout_gravity="right"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/painting_image"
                    />
                    <TextView
                        android:layout_gravity="right"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/painting"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="@color/WHITE"
                        android:background="@drawable/ground_userbutton"
                        android:layout_marginBottom="40dp"/>
                    <ImageView
                        android:id="@+id/imv_parking"
                        android:layout_gravity="right"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/parking_image"
                    />
                    <TextView
                        android:layout_gravity="right"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/parking"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:textColor="@color/WHITE"
                        android:background="@drawable/ground_userbutton"
                        android:layout_marginBottom="40dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</FrameLayout>