<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity"
    android:background="@color/WHITE">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundapp2"
            android:text="SIGN IN"
            android:textSize="20dp"
            android:layout_gravity="center"
           android:layout_margin="30dp"/>


        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ground_useredit"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="70dp"
            />
        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ground_useredit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:paddingLeft="20dp"
            android:layout_marginBottom="50dp"
            />


        <Button
            android:id="@+id/signin_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ground_userbutton"
            android:text="@string/SignIn"
            android:textColor="@color/WHITE"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="do you have an account?  Sign Up"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"/>


    </LinearLayout>
</ScrollView>
</RelativeLayout>